--- a/PlutoWallet.Model/PlutoWallet.Model.csproj
+++ b/PlutoWallet.Model/PlutoWallet.Model.csproj
@@ -14,6 +14,14 @@
 	  <PackageReference Include="Uniquery" Version="1.0.1" />
 	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
 	  <PackageReference Include="AzeroIdResolver" Version="1.0.2" />
+	  <PackageReference Include="Substrate.NET.Wallet" Version="1.0.7" />
+	  <PackageReference Include="Substrate.NET.API" Version="0.9.14" />
+      <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
+		<PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+		<PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
+		<PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
+		<PackageReference Include="System.Net.Primitives" Version="4.3.1" />
 	</ItemGroup>
 
   <ItemGroup>
