--- a/PlutoWallet/Platforms/MacCatalyst/Entitlements.plist
+++ b/PlutoWallet/Platforms/MacCatalyst/Entitlements.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>$(AppIdentifierPrefix)com.rostislavlitovkin.plutowallet</string>
 	</array>
+
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+
 </dict>
 </plist>
