--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -77,15 +77,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-	  <PackageReference Include="websocketsharp.core" Version="1.0.0" />
-	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
-	  <PackageReference Include="ZXing.Net.Maui.Controls" Version="0.3.0-preview.1" />
-	  <PackageReference Include="ZXing.Net.Maui" Version="0.3.0-preview.1" />
-	  <PackageReference Include="Markdig" Version="0.31.0" />
-	  <PackageReference Include="Uniquery" Version="1.0.1" />
-	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
-	  <PackageReference Include="AzeroIdResolver" Version="1.0.2" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+		<PackageReference Include="websocketsharp.core" Version="1.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
+		<PackageReference Include="ZXing.Net.Maui.Controls" Version="0.3.0-preview.1" />
+		<PackageReference Include="ZXing.Net.Maui" Version="0.3.0-preview.1" />
+		<PackageReference Include="Markdig" Version="0.31.0" />
+		<PackageReference Include="Uniquery" Version="1.0.1" />
+		<PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
+		<PackageReference Include="AzeroIdResolver" Version="1.0.2" />
+		<PackageReference Include="Substrate.NET.Wallet" Version="1.0.7" />
+		<PackageReference Include="Substrate.NET.API" Version="0.9.14" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
+		<PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+		<PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
+		<PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
+		<PackageReference Include="System.Net.Primitives" Version="4.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -477,8 +484,7 @@
 		<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
 	</PropertyGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\Substrate.NET.API\Substrate.NetApi\Substrate.NetApi.csproj" />
-	  <ProjectReference Include="..\Plutonication\Plutonication.csproj" />
 	  <ProjectReference Include="..\PlutoWallet.Model\PlutoWallet.Model.csproj" />
+	  <ProjectReference Include="..\Plutonication\Plutonication.csproj" />
 	</ItemGroup>
 </Project>
