--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -239,6 +239,7 @@
 	  <None Remove="Components\Buttons\" />
 	  <None Remove="Model\" />
 	  <None Remove="Components\Fee\" />
+	  <None Remove="Components\VTokens\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -469,6 +470,7 @@
 	  <Folder Include="Components\Buttons\" />
 	  <Folder Include="Model\" />
 	  <Folder Include="Components\Fee\" />
+	  <Folder Include="Components\VTokens\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.Contains('-ios')) and '$(Configuration)' == 'Release'">
