--- a/PlutoWallet.Model/PlutoWallet.Model.csproj
+++ b/PlutoWallet.Model/PlutoWallet.Model.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
 		<PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
 		<PackageReference Include="System.Net.Primitives" Version="4.3.1" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
 	</ItemGroup>
 
   <ItemGroup>
