--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -104,6 +104,8 @@
 	  <None Remove="Components\NetworkSelect\" />
 	  <None Remove="Components\AddressView\" />
 	  <None Remove="CommunityToolkit.Maui" />
+	  <None Remove="Resources\Images\copyblack.svg" />
+	  <None Remove="Resources\Images\copywhite.svg" />
 	  <None Remove="SubstrateNetApi" />
 	  <None Remove="Components\TransferView\" />
 	  <None Remove="ZXing.Net.Maui" />
@@ -375,6 +377,9 @@
 	  <BundleResource Include="Resources\Images\GalaxyLogicGame\galaxylogo.png" />
 	</ItemGroup>
 	<ItemGroup>
+	  <MauiXaml Update="Components\AddressView\AddressQrCodeView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
@@ -411,10 +416,6 @@
 
 	  <MauiXaml Update="Components\ArgumentsView\ArgumentsView.xaml">
 		<SubType></SubType>
-	  </MauiXaml>
-	  
-	  <MauiXaml Update="Components\PublicKeyQRCodeView\PublicKeyQRCodeView.xaml">
-	    <SubType></SubType>
 	  </MauiXaml>
 	  <MauiXaml Update="Components\DAppConnectionView\DAppConnectionView.xaml">
 	    <SubType></SubType>
@@ -457,9 +458,7 @@
 	  </MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Components\" />
 	  <Folder Include="Components\NetworkSelect\" />
-	  <Folder Include="Components\AddressView\" />
 	  <Folder Include="Components\TransferView\" />
 	  <Folder Include="Components\ConnectionRequestView\" />
 	  <Folder Include="Components\UniversalScannerView\" />
@@ -467,7 +466,6 @@
 	  <Folder Include="Components\TransactionRequest\" />
 	  <Folder Include="Components\CalamarView\" />
 	  <Folder Include="Components\ArgumentsView\" />
-	  <Folder Include="Components\PublicKeyQRCodeView\" />
 	  <Folder Include="Resources\Splash\" />
 	  <Folder Include="Resources\AppIcon\" />
 	  <Folder Include="Components\DAppConnectionView\" />
