--- a/PlutoWallet.Model/PlutoWallet.Model.csproj
+++ b/PlutoWallet.Model/PlutoWallet.Model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,8 +14,8 @@
 	  <PackageReference Include="Uniquery" Version="1.0.1" />
 	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
 	  <PackageReference Include="AzeroIdResolver" Version="1.0.2" />
-	  <PackageReference Include="Substrate.NET.Wallet" Version="1.0.7" />
-	  <PackageReference Include="Substrate.NET.API" Version="0.9.17" />
+	  <PackageReference Include="Substrate.NET.Wallet" Version="1.0.8" />
+	  <PackageReference Include="Substrate.NET.API" Version="0.9.21" />
       <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
 		<PackageReference Include="System.Collections" Version="4.3.0" />
 		<PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
