--- a/PlutoWallet.Model/PlutoWallet.Model.csproj
+++ b/PlutoWallet.Model/PlutoWallet.Model.csproj
@@ -61,4 +61,10 @@
     <ProjectReference Include="..\Generated\PolkadotAssetHub\PolkadotAssetHub.NetApi\PolkadotAssetHub.NetApi.csproj" />
     <ProjectReference Include="..\Generated\Polkadot\Polkadot.NetApi\Polkadot.NetApi.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Express/**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
