--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -48,7 +48,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
-    <MauiIcon Include="Resources\AppIcon\plutowalleticonwhite.png" />
+    <MauiIcon Include="Resources\AppIcon\appicon.png" />
 
 		<!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\plutowalleticonwhite.png" Color="#000000" />
