--- a/PlutoWallet/Platforms/Android/AndroidManifest.xml
+++ b/PlutoWallet/Platforms/Android/AndroidManifest.xml
@@ -11,4 +11,5 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
+	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 </manifest>
