--- a/UniqueryPlusTests/UniqueryPlusTests.csproj
+++ b/UniqueryPlusTests/UniqueryPlusTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="Substrate.NET.Wallet" Version="1.0.8" />
   </ItemGroup>
 
   <ItemGroup>
