--- a/.github/workflows/uniquery-plus-nuget-publish.yaml
+++ b/.github/workflows/uniquery-plus-nuget-publish.yaml
@@ -20,16 +20,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.5
-
-    - name: Restore dependencies
-      run: nuget restore $SOLUTION
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
+
+    - name: Restore dependencies
+      run: dotnet restore
 
     - name: Build
       run: dotnet build $SOLUTION --configuration Release --no-restore
