--- a/.github/workflows/uniquery-plus-nuget-publish.yaml
+++ b/.github/workflows/uniquery-plus-nuget-publish.yaml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore $SOLUTION
 
     - name: Build
       run: dotnet build $SOLUTION --configuration Release --no-restore
