IAsyncEnumerable generic method GetRandomCollectionsForSale

--- a/Speck/Speck.csproj
+++ b/Speck/Speck.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <GraphQL Remove="CollectionStatsQuery.graphql" />
-    <GraphQL Remove="Query\CollectionStatsQuery.graphql" />
+    <GraphQL Remove="NftsForSaleQuery.graphql" />
   </ItemGroup>
 
   <ItemGroup>
